2008-08-05  Joe English  <jenglish@users.sourceforge.net>

	* unix/tclUnixChan.c: Streamline async connect logic [Patch 1994512]

2008-08-05  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c: Fix for [Bug 2038069] by dgp.
	* tests/execute.test:

2008-08-04  Miguel Sofer  <msofer@users.sf.net>

	* tests/nre.test: added tests for [if], [while] and [for]. A test
	for [foreach] has been added and marked as knownbug, awaiting for
	it to be NR-enabled.
	
	* generic/tclBasic.c:      made atProcExit commands run
	* generic/tclCompile.h:    inconditionally, streamlined
	* generic/tclExecute.c:    atProcExit/tailcall processing
	* generic/tclProc.c:       in TEBC.
	* tests/unsupported.test:

2008-08-04  Don Porter  <dgp@users.sourceforge.net>S

	* generic/tclExecute.c: Stopped faulty double-logging of errors to
	* tests/execute.test:   stack trace when a compile epoch bump triggers
	fallback to direct evaluation of commands in a compiled script.
	[Bug 2037338]

2008-08-03  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:      new unsupported command atProcExit
	* generic/tclCompile.h:    that shares the implementation with 
	* generic/tclExecute.c:    tailcall. Fixed a segfault in 
	* generic/tclInt.h:        tailcalls. Tests added.
	* generic/tclInterp.c:
	* generic/tclNamesp.c:
	* tests/unsupported.test:
	
2008-08-02  Miguel Sofer  <msofer@users.sf.net>

	* tests/NRE.test (removed):	migrated tests to standard locations,
	* tests/nre.test (new):		separating core functionality from the
	* tests/unsupported.test (new):	experimental commands.

2008-08-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/Exit.3:                  do not call Tcl_Finalize implicitly
	* generic/tclEvent.c:          on DLL_PROCESS_DETACH as it may lead
	* win/tclWin32Dll.c (DllMain): to issues and the user should be
	explicitly calling Tcl_Finalize before unloading regardless.
	Clarify the docs to note the explicit need in embedded use.
